--- a/llmz/package.json
+++ b/llmz/package.json
@@ -2,11 +2,11 @@
   "name": "llmz",
   "version": "1.0.0",
   "description": "LLMZ CLI Program",
-  "main": "dist/server.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/server.js",
-    "dev": "ts-node src/server.ts"
+    "start": "npm run build && node dist/main.js",
+    "dev": "ts-node src/main.ts"
   },
   "dependencies": {
     "@botpress/client": "^1.27.0",
