--- a/llmz/package.json
+++ b/llmz/package.json
@@ -13,9 +13,9 @@
     "@bpinternal/zui": "^1.2.1",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
-    "json-schema-to-zod": "^2.6.1",
     "llmz": "^0.0.27",
-    "openai": "^6.7.0"
+    "openai": "^6.7.0",
+    "zod-from-json-schema": "^0.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
