--- a/middleman/package.json
+++ b/middleman/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/server.js",
-    "dev": "ts-node src/server.ts"
+    "dev": "tsx src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
