--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "private": true,
   "description": "LLMZ Benchmark Workspace",
   "scripts": {
+    "preinstall": "git submodule update --init --recursive",
+    "postinstall": "cd mcpmark && python3 -m venv .venv && .venv/bin/pip install -e .",
+    "dev": "concurrently \"pnpm dev:middleman\" \"pnpm dev:llmz\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks file_property/size_classification --k 1\" --names \"middleman,llmz,benchmark\" --prefix-colors \"cyan,magenta,yellow\"",
+    "dev:watch": "nodemon",
     "start:middleman": "pnpm --filter middleman start",
     "start:llmz": "pnpm --filter llmz start",
     "dev:middleman": "pnpm --filter middleman dev",
     "dev:llmz": "pnpm --filter llmz dev",
     "build": "pnpm -r build"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.10"
   }
 }
