No descriptions + output schemas

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "LLMZ Benchmark Workspace",
   "scripts": {
     "preinstall": "git submodule update --init --recursive",
-    "postinstall": "cd mcpmark && python3 -m venv .venv && .venv/bin/pip install -e .",
-    "dev": "concurrently \"pnpm dev:middleman\" \"pnpm dev:llmz\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks file_property/size_classification --k 1\" --names \"middleman,llmz,benchmark\" --prefix-colors \"cyan,magenta,yellow\"",
+    "postinstall": "cd mcpmark && python3.11 -m venv .venv && .venv/bin/pip install -e .",
+    "dev": "concurrently \"pnpm dev:middleman\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks file_property/size_classification --k 1\" --names \"middleman,benchmark\" --prefix-colors \"cyan,yellow\"",
     "dev:watch": "nodemon",
     "start:middleman": "pnpm --filter middleman start",
     "start:llmz": "pnpm --filter llmz start",
