--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "description": "LLMZ Benchmark Workspace",
   "scripts": {
     "postinstall": "cd mcpmark && python3.11 -m venv .venv && .venv/bin/pip install -e .",
-    "dev": "concurrently \"pnpm dev:middleman\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks music_report --k 1\" --names \"middleman,benchmark\" --prefix-colors \"cyan,yellow\"",
-    "dev:benchmark": "concurrently \"pnpm dev:middleman\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks all --k 1 --max-workers 8\" --names \"middleman,benchmark\" --prefix-colors \"cyan,yellow\"",
+    "dev": "PORT=${PORT:-3001} concurrently \"pnpm dev:llmz-server\" \"cd mcpmark && OPENAI_BASE_URL=http://localhost:${PORT:-3001} .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks music_report --k 1 ${EXP_NAME:+--exp-name $EXP_NAME}\" --names \"llmz-server,benchmark\" --prefix-colors \"cyan,yellow\"",
+    "dev:benchmark": "PORT=${PORT:-3001} concurrently \"pnpm dev:llmz-server\" \"cd mcpmark && OPENAI_BASE_URL=http://localhost:${PORT:-3001} .venv/bin/python -m pipeline --mcp filesystem --models gpt-5-nano --tasks all --k 1 --max-workers 1 ${EXP_NAME:+--exp-name $EXP_NAME}\" --names \"llmz-server,benchmark\" --prefix-colors \"cyan,yellow\"",
     "dev:watch": "nodemon",
-    "start:middleman": "pnpm --filter middleman start",
-    "start:llmz": "pnpm --filter llmz start",
-    "dev:middleman": "pnpm --filter middleman dev",
-    "dev:llmz": "pnpm --filter llmz dev",
+    "start:llmz-server": "pnpm --filter llmz-server start",
+    "dev:llmz-server": "pnpm --filter llmz-server dev",
     "dev:viewer": "pnpm --filter viewer dev",
     "build": "pnpm -r build"
   },
