feat: simplify the llmz server (#5)

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ logs/
 *.log
 npm-debug.log*
 pnpm-debug.log*
+results/
 
 # IDE
 .vscode/
@@ -36,3 +37,6 @@ pnpm-lock.yaml
 llmz/results/
 llmz/iteration_*.json
 llmz/final_result_*.json
+
+# MCPMark results
+relevant-results/
