--- a/llmz-server/package.json
+++ b/llmz-server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "middleman",
+  "name": "llmz-server",
   "version": "1.0.0",
-  "description": "Middleman Express Server",
+  "description": "LLMz Express Server",
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
@@ -9,7 +9,11 @@
     "dev": "tsx src/server.ts"
   },
   "dependencies": {
+    "@botpress/client": "^1.27.0",
+    "@bpinternal/zui": "1.2.1",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "llmz": "^0.0.27",
     "openai": "^6.7.0"
   },
   "devDependencies": {
