--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "private": true,
   "description": "LLMZ Benchmark Workspace",
   "scripts": {
-    "preinstall": "git submodule update --init --recursive",
-    "postinstall": "cd mcpmark && python3 -m venv .venv && .venv/bin/pip install -e .",
-    "dev": "concurrently \"pnpm dev:middleman\" \"pnpm dev:llmz\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks file_property/size_classification --k 1\" --names \"middleman,llmz,benchmark\" --prefix-colors \"cyan,magenta,yellow\"",
-    "dev:benchmark": "concurrently \"pnpm dev:middleman\" \"pnpm dev:llmz\" \"cd mcpmark && .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks all --k 1 --max-workers 30\" --names \"middleman,llmz,benchmark\" --prefix-colors \"cyan,magenta,yellow\"",
+    "postinstall": "cd mcpmark && python3.11 -m venv .venv && .venv/bin/pip install -e .",
+    "dev": "PORT=${PORT:-3001} concurrently \"pnpm dev:llmz-server\" \"cd mcpmark && OPENAI_BASE_URL=http://localhost:${PORT:-3001} .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks music_report --k 1 --max-workers 1\" --names \"llmz-server,benchmark\" --prefix-colors \"cyan,yellow\"",
+    "dev:benchmark": "PORT=${PORT:-3001} concurrently \"pnpm dev:llmz-server -m ${MODEL}\" \"cd mcpmark && OPENAI_BASE_URL=http://localhost:${PORT:-3001} .venv/bin/python -m pipeline --mcp filesystem --models gpt-5 --tasks all --k 1 --max-workers 1 ${MODEL:+--exp-name $MODEL-$(openssl rand -hex 4)}\" --names \"llmz-server,benchmark\" --prefix-colors \"cyan,yellow\"",
     "dev:watch": "nodemon",
-    "start:middleman": "pnpm --filter middleman start",
-    "start:llmz": "pnpm --filter llmz start",
-    "dev:middleman": "pnpm --filter middleman dev",
-    "dev:llmz": "pnpm --filter llmz dev",
+    "start:llmz-server": "pnpm --filter llmz-server start",
+    "dev:llmz-server": "pnpm --filter llmz-server dev",
     "dev:viewer": "pnpm --filter viewer dev",
     "build": "pnpm -r build"
   },
