--- a/llmz-server/package.json
+++ b/llmz-server/package.json
@@ -9,17 +9,18 @@
     "dev": "tsx src/server.ts"
   },
   "dependencies": {
-    "@botpress/client": "^1.27.0",
-    "@bpinternal/zui": "1.2.1",
+    "@botpress/client": "latest",
+    "@botpress/cognitive": "^0.3.1",
+    "@bpinternal/zui": "latest",
     "dotenv": "^17.2.3",
-    "express": "^4.18.2",
-    "llmz": "^0.0.27",
-    "openai": "^6.7.0"
+    "express": "^4.21.2",
+    "llmz": "latest",
+    "openai": "^6.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.0"
+    "@types/express": "^4.17.25",
+    "@types/node": "^20.19.25",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
